# stock-sample-web-app-python

./: Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
app/: data.py  main.py
app/static/: app.js  style.css
app/templates/: index.html
tests/: test_app.py
